# backend-manager-student/src/admin_api/v1/Swagger/admin_api/admin.swagger.yaml
@@ -119,10 +119,10 @@ components:
                             element:
                                 type: object
                                 example: Out Of Service
-#!@author Nguyễn Tiến Tài
-#!created_at 31/01/2023
-#!created_at 08/02/2023
-#!description: Login Admin
+    #!@author Nguyễn Tiến Tài
+    #!created_at 31/01/2023
+    #!created_at 08/02/2023
+    #!description: Login Admin
 paths:
     /api/v1/admin/login:
         post:
@@ -149,14 +149,14 @@ paths:
                                         admin_login_input:
                                             type: object
                                             properties:
-                                                phone:
+                                                mssv:
                                                     type: number
-                                                    example: 0791483642
+                                                    example: 60136745
                                                 password:
                                                     type: string
                                                     example: '20000531'
                         required:
-                            - phone
+                            - mssv
                             - password
             responses:
                 200:
@@ -203,9 +203,9 @@ paths:
 
     #!@author Nguyễn Tiến Tài
     #!created_at 31/01/2023
-    #!updated_at 08/02/2023
+    #!updated_at 08/02/2023 && 28/02/2023
     #!description Add Student
-    /api/v1/admin/add/student:
+    /api/v1/admin/private/add/student:
         post:
             summary: Add Student
             tags: [Add Student For Excel]
@@ -276,5 +276,109 @@ paths:
                                     element:
                                         type: object
                                         example: { result: string }
+                503:
+                    $ref: '#/components/responses/ServerFail'
+
+    #!@author Nguyễn Tiến Tài
+    #!created_at 28/02/2023
+    #!description: New Token
+    /api/v1/admin/renew-token:
+        post:
+            summary: New Token
+            tags: [New Token]
+            operationId: reNewToken
+            parameters:
+                - $ref: '#/components/parameters/COOKIE-CLIENT'
+                - $ref: '#/components/parameters/X-DEVICE-ID'
+                - $ref: '#/components/parameters/X-OS-TYPE'
+                - $ref: '#/components/parameters/X-OS-VERSION'
+                - $ref: '#/components/parameters/X-APP-VERSION'
+                - $ref: '#/components/parameters/X-DEVICE-NAME'
+                - $ref: '#/components/parameters/TOKEN'
+                  schema:
+                      $ref: '#/components/headers/AuthHeader'
+            responses:
+                200:
+                    description: New Token Success
+                    headers:
+                        $ref: '#/components/SaveCookie'
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: integer
+                                        example: 200
+                                    message:
+                                        type: string
+                                        example: Success
+                                    element:
+                                        type: object
+                                        example:
+                                            {
+                                                result:
+                                                    {
+                                                        access_token: string,
+                                                        refresh_token: string,
+                                                        role: number,
+                                                        user_id: string,
+                                                        name: string,
+                                                    },
+                                            }
+                400:
+                    description: Token is Blacklist or Invalid Header or The refresh token is invalid or Device Invalid
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: integer
+                                        example: 400
+                                    message:
+                                        type: string
+                                        example: string
+                                    element:
+                                        type: object
+                                        example: { result: string }
+                503:
+                    $ref: '#/components/responses/ServerFail'
+    #!@author Nguyễn Tiến Tài
+    #!created_at 28/02/2023
+    #!description: Logout admin
+    /api/v1/admin/private/logout:
+        post:
+            summary: Logout Admin
+            tags: [Logout Admin]
+            operationId: logoutAdmin
+            parameters:
+                - $ref: '#/components/parameters/COOKIE-CLIENT'
+                - $ref: '#/components/parameters/X-DEVICE-ID'
+                - $ref: '#/components/parameters/X-OS-TYPE'
+                - $ref: '#/components/parameters/X-OS-VERSION'
+                - $ref: '#/components/parameters/X-APP-VERSION'
+                - $ref: '#/components/parameters/X-DEVICE-NAME'
+                - $ref: '#/components/parameters/TOKEN'
+                  schema:
+                      $ref: '#/components/headers/AuthHeader'
+            responses:
+                200:
+                    description: Logout Success
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: integer
+                                        example: 200
+                                    message:
+                                        type: string
+                                        example: Success
+                401:
+                    $ref: '#/components/responses/UnauthorizedError'
+                500:
+                    $ref: '#/components/responses/ServerCURDFail'
+
                 503:
                     $ref: '#/components/responses/ServerFail'
